Fix button playerControls on mobile

--- a/src/features/Player/components/PlayerControls/styles.scss
+++ b/src/features/Player/components/PlayerControls/styles.scss
@@ -73,7 +73,7 @@
       }
 
       &--active {
-        color: #6f0fbdbb;
+        color: #6f0fbdbb !important;
       }
     }
   }
